# xylo

./: .clang-format  .gitignore  CMakeLists.txt  check-lint.sh  coverage.sh  format.sh  memcheck.sh  memcheck.supp
include/xylo/codegen/: building_util.h  class_lowerer.h  codegen_scope.h  compiler.h  declaration_lowerer.h  function_lowerer.h  interface_lowerer.h  lowering_node.h  mangler.h  module_lowerer.h  pointer_adjuster.h  program_lowerer.h  type_converter.h
include/xylo/runtime/: memory.h
include/xylo/syntax/: ast.h  context.h  diagnostic.h  file.h  flow_analyzer.h  identifier.h  inferencer.h  lexer.h  location.h  parser.h  resolver.h  scope.h  substitution.h  token.h  type.h  verifier.h
include/xylo/util/: contract.h  downcastable.h  finally.h  hstring.h  hstring_view.h  map.h  number.h  pair_hash.h  set.h  string.h  vector.h
src/: CMakeLists.txt  xylo.cpp
src/codegen/: CMakeLists.txt  building_util.cpp  class_lowerer.cpp  codegen_scope.cpp  compiler.cpp  declaration_lowerer.cpp  function_lowerer.cpp  interface_lowerer.cpp  lowering_node.cpp  module_lowerer.cpp  pointer_adjuster.cpp  program_lowerer.cpp  type_converter.cpp
src/runtime/: CMakeLists.txt  memory.cpp
src/syntax/: CMakeLists.txt  file.cpp  flow_analyzer.cpp  inferencer.cpp  lexer.cpp  location.cpp  parser.cpp  resolver.cpp  substitution.cpp  token.cpp  type.cpp  verifier.cpp
test/unit/: CMakeLists.txt
test/unit/codegen/: class_test.cpp  compiler_common.h  compiler_test.cpp  flow_test.cpp  function_test.cpp  generics_test.cpp  interface_test.cpp  operator_test.cpp  value_test.cpp
test/unit/syntax/: ast_test.cpp  flow_analyzer_test.cpp  identifier_test.cpp  inferencer_test.cpp  lexer_test.cpp  parser_test.cpp  resolver_test.cpp  type_printer_test.cpp  type_test.cpp  verifier_test.cpp
