include(GoogleTest)

file(GLOB_RECURSE files *_test.cpp)
foreach(file ${files})
  get_filename_component(target ${file} NAME_WE)
  add_executable(${target} ${file})
  target_link_libraries(${target} PRIVATE xylo_syntax)
  target_link_libraries(${target} PRIVATE xylo_codegen)
  target_link_libraries(${target} PRIVATE xylo_runtime)
  target_link_libraries(${target} PRIVATE ${LLVM_LIBS})
  target_link_libraries(${target} PRIVATE BoehmGC)
  target_link_libraries(${target} PRIVATE GTest::gtest_main)
  gtest_discover_tests(${target})
endforeach()
